# tiny_agents

./: .env  pyproject.toml  requirements.txt
tiny_agents/assistant/deep_research/backend/: pyproject.toml
tiny_agents/assistant/deep_research/backend/memory/traces/: trace-s-20260315-154916-6d3f.html  trace-s-20260315-154916-6d3f.jsonl  trace-s-20260315-155418-8a16.html  trace-s-20260315-155418-8a16.jsonl  trace-s-20260315-155418-bd2d.html  trace-s-20260315-155418-bd2d.jsonl  trace-s-20260315-155418-e48c.html  trace-s-20260315-155418-e48c.jsonl  trace-s-20260315-155437-2b6f.html  trace-s-20260315-155437-2b6f.jsonl  trace-s-20260315-155437-9553.html  trace-s-20260315-155437-9553.jsonl  trace-s-20260315-160133-3593.html  trace-s-20260315-160133-3593.jsonl  trace-s-20260315-160133-58ad.html  trace-s-20260315-160133-58ad.jsonl  trace-s-20260315-160133-7614.html  trace-s-20260315-160133-7614.jsonl  trace-s-20260315-160215-80c0.html  (+277 more)
tiny_agents/assistant/deep_research/backend/notes/: note_20260315_155441_0.md  note_20260315_160221_1.md  note_20260315_160458_2.md  note_20260315_161043_3.md  note_20260315_161542_4.md  note_20260315_161657_5.md  note_20260315_161900_6.md  note_20260315_162119_7.md  note_20260315_162159_8.md  note_20260315_162226_9.md  note_20260315_162716_10.md  note_20260315_170521_11.md  note_20260315_170641_12.md  note_20260315_170843_13.md  note_20260315_171245_14.md  note_20260315_171429_15.md  note_20260315_171748_16.md  note_20260315_171750_17.md  note_20260315_171752_18.md  note_20260315_171755_19.md  note_20260315_172158_20.md  note_20260315_172223_21.md  note_20260315_173110_22.md  note_20260315_173802_23.md  note_20260315_173914_24.md  note_20260315_173922_25.md  note_20260315_173925_26.md  note_20260315_173936_27.md  note_20260315_174140_28.md  note_20260315_174142_29.md  note_20260315_174145_30.md  note_20260315_174146_31.md  note_20260315_174218_32.md  note_20260315_174351_33.md  note_20260315_185043_34.md  note_20260315_185228_35.md  note_20260315_190421_36.md  note_20260315_190425_37.md  note_20260315_190425_38.md  note_20260315_190425_39.md  (+2 more)
tiny_agents/assistant/deep_research/backend/src/: __init__.py  agent.py  config.py  main.py  prompts.py  utils.py
(+1337 files in other folders)
