[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agents"
version = "0.1.0"
description = "轻量级 AI Agent 框架"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["tiny_agents"]

[tool.setuptools.package-data]
tiny_agents = ["*.json", "*.yaml", "*.yml"]
