[project]
name = "tinyagents-deep-researcher"
version = "1.0.0"
description = "Fully local web research and summarization assistant powered by TinyAgents."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.0",    
    "tavily-python>=0.7.20",
    "python-dotenv==1.2.2",
    "requests>=2.31.0",
    "openai>=2.27.0",
    "uvicorn[standard]>=0.40.0",
    "ddgs>=9.10.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]